# saliency_map_poster_test

./: .gitignore  README.md  analyze_faithfulness_significance.py  analyze_query_efficiency.py  evaluate_faithfulness.py  pyproject.toml
src/: analyze_bo_advantage.py  analyze_faithfulness_significance.py  analyze_occlusion.py  analyze_query_efficiency.py  data_stats.py  dataset.py  download_data.py  evaluate.py  evaluate_faithfulness.py  experiment_io.py  main.py  make_poster_assets.py  metrics.py  model.py  occlusion.py  run_bo.py  run_pilot_experiment.py  run_random.py  run_sliding.py  saliency.py  train.py  validate_occlusion_runs.py  visualize_occlusion.py  visualize_three_occlusions.py
src/bo_segocc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py  test_evaluate_faithfulness.py
