[project]
name = "bo-segocc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.17.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
]
